<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.droidcafe.MainActivity">
    <item
        android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:title="@string/actionContact"
        android:onClick="showDialer"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_order"
        android:icon="@drawable/ic_shopping_cart"
        android:orderInCategory="10"
        android:title="@string/actionOrder"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_status"
        android:icon="@drawable/ic_status_info"
        android:orderInCategory="20"
        android:title="@string/actionStatus"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_favorites"
        android:icon="@drawable/ic_favorites"
        android:orderInCategory="30"
        android:title="@string/actionFavorites"
        app:showAsAction="ifRoom"/>
</menu>